style: add scroll property to list of cohorts and forms. Set body in global style to overflow of hidden to prevent whole page scrolling

--- a/src/app/features/cohorts/create-new-cohort/create-new-cohort.component.scss
+++ b/src/app/features/cohorts/create-new-cohort/create-new-cohort.component.scss
@@ -11,7 +11,10 @@
 
     & .wrapper {
         width: 67.5rem;
+        height: 90vh;
+        overflow-y: scroll;
         margin-top: 2.6rem;
+        padding-bottom: 8rem;
 
         & .back-button {
             width: fit-content;
