--- a/src/app/features/cohorts/list-cohorts/list-cohorts.component.scss
+++ b/src/app/features/cohorts/list-cohorts/list-cohorts.component.scss
@@ -73,6 +73,7 @@
 
         & .list-wrapper {
             width: 100%;
+            height: 90vh;
 
             & .headers {
                 display: flex;
